--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Learning | Log</title>
+  <title>洛阳工业大数据分析平台</title>
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="{{STATIC_URL}}plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
@@ -76,7 +76,7 @@
       <a href="/" class="brand-link">
         <img src="{{STATIC_URL}}dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
           class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light">Learning Log</span>
+        <span class="brand-text font-weight-light"><strong>Industrial Platform</strong></span>
       </a>
       <!-- Sidebar -->
       <div class="sidebar">
