--- a/Industrial_Logs/templates/Industrial_Logs/index.html
+++ b/Industrial_Logs/templates/Industrial_Logs/index.html
@@ -2,7 +2,7 @@
 
 {% block header %} 
   <div class='jumbotron'> 
-    <h1>Track your learning.</h1> 
+    <h1>欢迎来到洛阳工业大数据分析平台！</h1> 
   </div> 
 {% endblock header %}
 
