--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,7 +14,7 @@
 <body class="templatemo-bg-gray">
 	<div class="container">
 		<div class="col-md-12">
-			<h1 class="margin-bottom-15">欢迎使用洛阳工业大数据平台</h1>
+			<h1 class="margin-bottom-15">欢迎使用洛阳工业大数据分析平台</h1>
 			<form class="form-horizontal templatemo-container templatemo-login-form-1 margin-bottom-30" role="form" action="#" method="post">				
 		        <div class="form-group">
 		          <div class="col-xs-12">		            
