--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -1,158 +1,242 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>洛阳工业大数据分析平台</title>
-  <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="{{STATIC_URL}}plugins/fontawesome-free/css/all.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="{{STATIC_URL}}dist/css/adminlte.min.css">
-  <!-- Google Font: Source Sans Pro -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>洛阳工业大数据分析平台</title>
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="{{STATIC_URL}}plugins/fontawesome-free/css/all.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="{{STATIC_URL}}dist/css/adminlte.min.css">
+    <!-- Google Font: Source Sans Pro -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <!-- 我的css和js -->
+    <link href="{{STATIC_URL}}css/playground.css" media="all" rel="stylesheet" type="text/css" />
+
 </head>
 
 <body class="hold-transition sidebar-mini">
-  <div class="wrapper">
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-      <!-- Left navbar links -->
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-        </li>
-        <li class="nav-item d-none d-sm-inline-block">
-          <a href="/" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item d-none d-sm-inline-block">
-          <a href="#" class="nav-link">Contact</a>
-        </li>
-      </ul>
-      <!-- SEARCH FORM -->
-      <form class="form-inline ml-3">
-        <div class="input-group input-group-sm">
-          <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-          <div class="input-group-append">
-            <button class="btn btn-navbar" type="submit">
+
+    <!-- jQuery -->
+    <script src="{{STATIC_URL}}plugins/jquery/jquery.min.js"></script>
+    <!-- Bootstrap 4 -->
+    <script src="{{STATIC_URL}}plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="{{STATIC_URL}}dist/js/adminlte.min.js"></script>
+    <!-- 设备 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.2.1/echarts-en.common.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{STATIC_URL}}dist/js/echarts-4.2.1.min.js"></script>
+    <script src="{{STATIC_URL}}dist/js/monitor.js"></script>
+    <script src="../../../static/js/fullscreen.js"></script>
+    <script src="../../../static/js/echarts.min.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            drawLayer02Label($("#layer02_01 canvas").get(0), "接入终端数量", 80, 200);
+            drawLayer02Label($("#layer02_02 canvas").get(0), "当前温度数据", 80, 300);
+            drawLayer02Label($("#layer02_03 canvas").get(0), "当前湿度数据", 80, 400);
+            drawLayer02Label($("#layer02_04 canvas").get(0), "总存储数据", 50, 200);
+            drawLayer02Label($("#layer02_05 canvas").get(0), "当前任务个数", 40, 200);
+            drawLayer02Label($("#layer02_06 canvas").get(0), "当前集群数", 50, 200);
+
+            renderLegend();
+
+            //饼状图
+            renderChartBar01();
+            //renderChartBar02();
+
+            //存储
+            renderLayer03Right();
+
+            //30天日均线流量趋势
+            renderLayer04Left();
+
+            //集群性能
+            renderLayer04Right();
+        });
+    </script>
+
+    <div class="wrapper">
+        <!-- Navbar -->
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+            <!-- Left navbar links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="/" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <!-- SEARCH FORM -->
+            <form class="form-inline ml-3">
+                <div class="input-group input-group-sm">
+                    <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                    <div class="input-group-append">
+                        <button class="btn btn-navbar" type="submit">
               <i class="fas fa-search"></i>
             </button>
-          </div>
-        </div>
-      </form>
-      <!-- Right navbar links -->
-      <ul class="navbar-nav ml-auto">
-        <!-- Notifications Dropdown Menu -->
-        <li class="nav-item dropdown">
-          <a class="nav-link" data-toggle="dropdown" href="#">
-            <i class="far fa-bell"></i>
-            <span class="badge badge-warning navbar-badge">15</span>
-          </a>
-          <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-            <span class="dropdown-header">15 Notifications</span>
-            <div class="dropdown-divider"></div>
-            <a href="#" class="dropdown-item">
-              <i class="fas fa-file mr-2"></i> 3 new reports
-              <span class="float-right text-muted text-sm">2 days</span>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
-          </div>
-        </li>
-
-        {% if user.is_authenticated %} 
-        <li class="nav-item"><a class="nav-link">您好, {{ user.username }}.</a></li> 
-        <li class="nav-item"><a class="nav-link" href="{% url 'users:logout' %}">退出系统</a></li> 
-        {% else %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'users:register' %}">注册</a></li> 
-        <li class="nav-item"><a class="nav-link" href="{% url 'users:login' %}">登录</a></li> 
-        {% endif %}
-      </ul>
-    </nav>
-    <!-- /.navbar -->
-    <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-      <!-- Brand Logo -->
-      <a href="/" class="brand-link">
-        <img src="{{STATIC_URL}}dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
-          class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light"><strong>Industrial Platform</strong></span>
-      </a>
-      <!-- Sidebar -->
-      <div class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <!-- Sidebar Menu -->
-        <nav class="mt-2">
-          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-            <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
-            <li class="nav-item">
-              <a href="#" class="nav-link active">
-                <i class="nav-icon fas fa-th"></i>
-                <p>
-                  仪表盘
-                  <span class="right badge badge-danger">New</span>
-                </p>
-              </a>
-            </li>
-            <li class="nav-item has-treeview menu-open">
-              <a href="#" class="nav-link ">
-                <i class="nav-icon fas fa-tachometer-alt"></i>
-                <p>
-                  主题
-                  <i class="right fas fa-angle-left"></i>
-                </p>
-              </a>
-              <ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="{% url 'Industrial_Logs:topics' %}" class="nav-link "><!-- 添加active类菜单高亮 -->
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>创建主题</p>
-                  </a>
+                    </div>
+                </div>
+            </form>
+            <!-- Right navbar links -->
+            <ul class="navbar-nav ml-auto">
+                <!-- Notifications Dropdown Menu -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link" data-toggle="dropdown" href="#">
+                        <i class="far fa-bell"></i>
+                        <span class="badge badge-warning navbar-badge">15</span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                        <span class="dropdown-header">15 Notifications</span>
+                        <div class="dropdown-divider"></div>
+                        <a href="#" class="dropdown-item">
+                            <i class="fas fa-file mr-2"></i> 3 new reports
+                            <span class="float-right text-muted text-sm">2 days</span>
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+                    </div>
                 </li>
 
-              </ul>
-            </li>
-
-          </ul>
+                {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link">您好, {{ user.username }}.</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'users:logout' %}">退出系统</a></li>
+                {% else %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'users:register' %}">注册</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'users:login' %}">登录</a></li>
+                {% endif %}
+            </ul>
         </nav>
-        <!-- /.sidebar-menu -->
-      </div>
-      <!-- /.sidebar -->
-    </aside>
+        <!-- /.navbar -->
+        <!-- Main Sidebar Container -->
+        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+            <!-- Brand Logo -->
+            <a href="/" class="brand-link">
+                <img src="{{STATIC_URL}}dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+                <span class="brand-text font-weight-light"><strong>Industrial Platform</strong></span>
+            </a>
+            <!-- Sidebar -->
+            <div class="sidebar">
+                <!-- Sidebar user panel (optional) -->
+                <!-- Sidebar Menu -->
+                <nav class="mt-2">
+                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                        <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+                        <li class="nav-item">
+                            <a href="{% url 'Industrial_Logs:topics' %}" class="nav-link active">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    仪表盘
+                                    <span class="right badge badge-danger" onClick="xs()">显示</span>
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item has-treeview menu-open">
+                            <a href="#" class="nav-link ">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>
+                                    设备信息
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="{% url 'Industrial_Logs:topics' %}" class="nav-link ">
+                                        <!-- 添加active类菜单高亮 -->
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>采集设备</p>
+                                    </a>
+                                </li>
 
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-      <!-- Main content -->
-      <div class="content">
-        <div class="container-fluid">
-            {% block header %} 
-            {% endblock header %}
-          {%block content%}
-          {%endblock%}
-        </div><!-- /.container-fluid -->
-      </div>
-      <!-- /.content -->
-    </div>
-    <!-- /.content-wrapper -->
-    <!-- Main Footer -->
-    <footer class="main-footer">
-      <!-- To the right -->
+                            </ul>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="{% url 'Industrial_Logs:realtem_hum' %}" class="nav-link ">
+                                        <!-- 添加active类菜单高亮 -->
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>传感器</p>
+                                    </a>
+                                </li>
 
-      <!-- Default to the left -->
-      <strong>Copyright &copy; 2019 All rights reserved.
+                            </ul>
+                        </li>
+                        <li class="nav-item has-treeview menu-open">
+                            <a href="#" class="nav-link ">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>
+                                    系统管理
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="{% url 'Industrial_Logs:realdev_tem' %}" class="nav-link ">
+                                        <!-- 添加active类菜单高亮 -->
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>用户管理</p>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item has-treeview menu-open">
+                            <a href="#" class="nav-link ">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>
+                                    实时数据
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="{% url 'Industrial_Logs:realdev_tem' %}" class="nav-link ">
+                                        <!-- 添加active类菜单高亮 -->
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>温湿度实时数据</p>
+                                    </a>
+                                </li>
+
+                            </ul>
+
+                        </li>
+
+                    </ul>
+                </nav>
+                <!-- /.sidebar-menu -->
+            </div>
+            <!-- /.sidebar -->
+        </aside>
+
+
+
+        <!-- Content Wrapper. Contains page content -->
+        <div class="content-wrapper">
+            <!-- Main content -->
+            <div class="content">
+                <div class="container-fluid">
+                    {% block header %} {% endblock header %} {%block content%} {%endblock%}
+                </div>
+                <!-- /.container-fluid -->
+            </div>
+            <!-- /.content -->
+        </div>
+        <!-- /.content-wrapper -->
+        <!-- Main Footer -->
+        <footer class="main-footer">
+            <!-- To the right -->
+
+            <!-- Default to the left -->
+            <strong>Copyright &copy; 2019 All rights reserved.
     </footer>
   </div>
   <!-- ./wrapper -->
-
-  <!-- REQUIRED SCRIPTS -->
-
-  <!-- jQuery -->
-  <script src="{{STATIC_URL}}plugins/jquery/jquery.min.js"></script>
-  <!-- Bootstrap 4 -->
-  <script src="{{STATIC_URL}}plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="{{STATIC_URL}}dist/js/adminlte.min.js"></script>
 </body>
 
 </html>
