--- a/Industrial_Logs/templates/Industrial_Logs/topics.html
+++ b/Industrial_Logs/templates/Industrial_Logs/topics.html
@@ -1,19 +1,89 @@
-{% extends "Industrial_Logs/base.html" %} 
-{% block header %} 
- <h1>Topics</h1> 
-{% endblock header %}
+{% extends "Industrial_Logs/base.html" %} {% block header %} {% endblock header %} {% block content %}
+<div id="back" class="main">
 
-{% block content %} 
-  <ul> 
-    {% for topic in topics %} 
-      <li>
-        <h3> 
-          <a href="{% url 'Industrial_Logs:topic' topic.id %}">{{ topic }}</a> 
-        </h3> 
-      </li> 
-    {% empty %} 
-      <li>No topics have been added yet.</li> 
-    {% endfor %} 
-  </ul> 
-  <h3><a href="{% url 'Industrial_Logs:new_topic' %}">Add new topic</h3> 
+    <h1 style="color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 40px;">洛阳工业大数据平台</h1>
+
+    <div id="layer02" class="layer" style="height:15%;">
+        <div id="layer02_01" style="width:20%;">
+            <div class="layer02-data">
+                <span style="font-size:26px;">{{ss}}</span>
+                <span style="font-size:16px;">台</span>
+            </div>
+            <canvas width="200" height="100"></canvas>
+        </div>
+        <div id="layer02_02" style="width:20%;">
+            <div class="layer02-data">
+                <span style="font-size:26px;">{{aa1}}</span>
+                <span style="font-size:16px;">℃</span>
+            </div>
+            <canvas width="200" height="100"></canvas>
+        </div>
+        <div id="layer02_03" style="width:21%;">
+            <div class="layer02-data">
+                <span style="font-size:26px;">{{aa2}}</span>
+                <span style="font-size:16px;">%rh</span>
+            </div>
+            <canvas width="200" height="100"></canvas>
+        </div>
+        <div id="layer02_04" style="width:12%;">
+            <div class="layer02-data">
+                <span style="font-size:26px;">50</span>
+                <span style="font-size:16px;">PB</span>
+            </div>
+            <canvas width="120" height="100"></canvas>
+        </div>
+        <div id="layer02_05" style="width:12%;">
+            <div class="layer02-data">
+                <span style="font-size:26px;">25</span>
+                <span style="font-size:16px;">个</span>
+            </div>
+            <canvas width="120" height="100"></canvas>
+        </div>
+        <div id="layer02_06" style="width:12%;">
+            <div class="layer02-data">
+                <span style="font-size:26px;">5</span>
+                <span style="font-size:16px;">个</span>
+            </div>
+            <canvas width="120" height="100"></canvas>
+        </div>
+    </div>
+    <div id="layer03" class="layer" style="height:40%;">
+        <div id="layer03_left" style="width:48%;" class="layer03-panel">
+            <div id="layer03_left_label01" class="layer03-left-label">接入机型占比</div>
+            <div id="layer03_left_01" class="layer03-left-chart" style="width:16%;">
+                <canvas width="100" height="200" style="margin:30px 0 0 20px;"></canvas>
+            </div>
+            <div id="layer03_left_02" class="layer03-left-chart" style="width:80%;"></div>
+
+        </div>
+        <div id="layer03_right" style="width:50%;" class="layer03-panel">
+            <div id="layer03_right_label">存储</div>
+            <div id="layer03_right_chart01" class="layer03-right-chart">
+                <canvas width="130" height="150" style="margin:40px 0 0 20px;"></canvas>
+                <div class="layer03-right-chart-label">Hdfs</div>
+            </div>
+            <div id="layer03_right_chart02" class="layer03-right-chart">
+                <canvas width="130" height="150" style="margin:40px 0 0 20px;"></canvas>
+                <div class="layer03-right-chart-label">Rdbms</div>
+            </div>
+            <div id="layer03_right_chart03" class="layer03-right-chart">
+                <canvas width="130" height="150" style="margin:40px 0 0 20px;"></canvas>
+                <div class="layer03-right-chart-label">Rdies</div>
+            </div>
+        </div>
+    </div>
+    <div id="layer04" class="layer" style="height:30%;">
+        <div id="layer04_left" class="layer04-panel">
+            <div id="layer04_left_label" class="layer04-panel-label">30天日均线流量趋势</div>
+            <div id="layer04_left_chart" class="layer04-panel-chart"></div>
+        </div>
+        <div id="layer04_right" class="layer04-panel">
+            <div id="layer04_right_label" class="layer04-panel-label">
+                <span>集群性能/</span><span style="color:#00A09A;">近一个小时</span>
+            </div>
+            <div id="layer04_right_chart" class="layer04-panel-chart"></div>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
