--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -9,7 +9,7 @@
 	<link href="{{STATIC_URL}}css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="{{STATIC_URL}}css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-	<link href="{{STATIC_URL}}css/templatemo_style.css" rel="stylesheet" type="text/css">	
+	<link href="{{STATIC_URL}}css/templatemo_style.css" rel="stylesheet" type="text/css">
 </head>
 <body class="templatemo-bg-gray">
 	<div class="container">
@@ -31,5 +31,6 @@
 		        <hr>
 		    </form>
 	</div>
+    </div>
 </body>
 </html>
