--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -141,7 +141,7 @@
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     仪表盘
-                                    <span class="right badge badge-danger" id="btn" onclick="btnClick();" >显示</span>
+                                    <span class="right badge badge-danger" id="btn" onclick="btnClick(event);" >显示</span>
                                 </p>
                             </a>
                         </li>
@@ -246,8 +246,9 @@
   </div>
   <!-- ./wrapper -->
 <script>
-        function btnClick() {
-    　　var elem = document.getElementById("container");
+        function btnClick(event) {
+            event.preventDefault();
+    　　  var elem = document.getElementById("container");
     　　fullScreen(elem);
         }
     function fullScreen(element) {
