--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,7 +1,7 @@
 {% load bootstrap3 %}
 <!DOCTYPE html>
 <head>
-	<title>Login One</title>
+	<title>洛阳工业大数据</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<meta charset="UTF-8">
@@ -10,27 +10,39 @@
 	<link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="{{STATIC_URL}}css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
 	<link href="{{STATIC_URL}}css/templatemo_style.css" rel="stylesheet" type="text/css">
+	<link href="{{STATIC_URL}}css/login_and_register.css" rel="stylesheet" type="text/css">
 </head>
 <body class="templatemo-bg-gray">
 	<div class="container">
 		<div class="col-md-12">
 			<h1 class="margin-bottom-15">新用户注册</h1>
-			<form class="form-horizontal templatemo-container templatemo-login-form-1 margin-bottom-30" role="form" action="#" method="post">				
+			<form class="form-horizontal templatemo-container templatemo-login-form-1 margin-bottom-30 register_body" role="form" action="#" method="post">
 		        <div class="form-group">
-		          <div class="col-xs-12">		            
-                <form method="post" action="{% url 'users:register' %}" class="form"> 
-                  {% csrf_token %} 
-                  {% bootstrap_form form %} 
-                  {% buttons %} 
-                      <button name="submit" class="btn btn-primary" style="margin-left:200px;">注册</button>
-                  {% endbuttons %} 
-                  <input type="hidden" name="next" value="{% url 'Industrial_Logs:index' %}" /> 
-               </form>     
-		          </div>              
+		          <div class="col-xs-12">
+                <form method="post" action="{% url 'users:register' %}" class="form">
+                  {% csrf_token %}
+                  {% bootstrap_form form %}
+                  {% buttons %}
+                      <button name="submit" class="btn btn-primary">注册</button>
+                  {% endbuttons %}
+                  <input type="hidden" name="next" value="{% url 'Industrial_Logs:index' %}" />
+               </form>
+		          </div>
 		        </div>
-		        <hr>
-		    </form>
+		        <!-- <hr> -->
+			</form>
+			<div class="text-center">
+				<a href="{% url 'users:login' %}" class="templatemo-create-new" style="color: aliceblue;">已有账户，回到登录界面<i class="fa fa-arrow-circle-o-right"></i></a>
+			</div>
 	</div>
-    </div>
 </body>
+<script type="text/javascript">
+console.log(document.getElementsByTagName("input"));
+document.getElementsByTagName("input")[1].setAttribute("placeholder","包含字母，数字和仅有的@/./+/-/_符号");
+// console.log(document.getElementsByTagName("input")[1].placeholder);
+document.getElementsByTagName("input")[2].setAttribute("placeholder","包含至少 8 个字符，不能完全是数字");
+// console.log(document.getElementsByTagName("input")[2].placeholder);
+document.getElementsByTagName("input")[3].setAttribute("placeholder","再次输入密码");
+// console.log(document.getElementsByTagName("input")[2].placeholder);
+</script>
 </html>
