修改了一下登录和注册界面，在static里面添加了一个login_and_register.css文件,还有一个img文件下的背景图片

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -33,7 +33,7 @@
 		      <div class="text-center">
 		      	<a href="{% url 'users:register' %}" class="templatemo-create-new"  style="color: aliceblue;">注册新的账户<i class="fa fa-arrow-circle-o-right"></i></a>
 		      </div>
-
+        </div>
 	</div>
 </body>
 </html>
