--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -34,6 +34,7 @@
 			<div class="text-center">
 				<a href="{% url 'users:login' %}" class="templatemo-create-new" style="color: aliceblue;">已有账户，回到登录界面<i class="fa fa-arrow-circle-o-right"></i></a>
 			</div>
+        </div>
 	</div>
 </body>
 <script type="text/javascript">
