--- a/Industrial_Logs/templates/Industrial_Logs/SDS011.html
+++ b/Industrial_Logs/templates/Industrial_Logs/SDS011.html
@@ -1,9 +1,10 @@
-{% extends "Industrial_Logs/base.html" %} 
-{% load bootstrap3 %}
-{% block header %}
-  <h2>Add a new topic:</h2>
-{% endblock header %}
+{% extends "Industrial_Logs/base.html" %} {% block header %} {% endblock header %} {% block content %}
+    <script src="{{STATIC_URL}}dist/js/sds011.js"></script>
 
-{% block content %} 
-    <p style="color: blue">SDS011图表显示</p>
+    <div id="chart_SDS011_1" style="height: 80px; width: 100px"></div>
+    <script>
+    $(function () {
+        chartSDS011_1();
+    })
+    </script>
 {% endblock content %}
