无关紧要的修改HTML页面

--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -126,7 +126,7 @@
                             <a href="#" class="nav-link ">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    传感器信息
+                                    传感器
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
@@ -155,7 +155,7 @@
                                     <a href="{% url 'Industrial_Logs:Sensor_Proportion' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>两者占比关系</p>
+                                        <p>传感器信息</p>
                                     </a>
                                 </li>
 
@@ -166,7 +166,7 @@
                             <a href="#" class="nav-link ">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    Hadoop平台信息
+                                    Hadoop平台
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
@@ -215,7 +215,7 @@
                             <a href="#" class="nav-link ">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    历史数据信息
+                                    历史数据分析
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
@@ -270,7 +270,7 @@
                             <a href="#" class="nav-link ">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    实时数据
+                                    实时数据展示
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
