--- a/Industrial_Logs/templates/Industrial_Logs/BME280.html
+++ b/Industrial_Logs/templates/Industrial_Logs/BME280.html
@@ -6,8 +6,9 @@
     <script src="{{STATIC_URL}}dist/js/bme280.js"></script>
     <div id="back" class="main" style="height:90%;">
         <h1 style="color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;">数据信息</h1>
-        <div style="border:2px solid #666;width:51%;height: 40%;float:left" id="chart_BME280_1"  class="chart-container"></div>
-        <div style="border:2px solid #666;width:51%;height: 40%;float:left" id="chart_BME280_2" class="chart-container"></div>
+        <div style="border:2px solid #666;width:49%;height: 40%;float:left" id="chart_BME280_1"  class="chart-container"></div>
+        <div style="border:2px solid #666;width:49%;height: 40%;float:right" id="chart_BME280_2" class="chart-container"></div>
+        <div style="border:2px solid #666;width:100%;height: 50%;float:left;margin-top: 2%" id="chart_BME280_3" class="chart-container"></div>
     </div>
     <script>
     $(function () {
@@ -19,12 +20,11 @@
 				dataType: "json", //返回数据格式为json
 				success: function(data) {//请求成功完成后要执行的方法
 				    console.log(data);
-				   chartBME280_1(data);
-                    chartBME280_2(data);
-
-            }
-			}
-        )
+				    chartBME280_1(data);
+				    chartBME280_2(data);
+				}
+        });
+        chartBME280_3();
 
     })
     </script>
