--- a/Industrial_Logs/templates/Industrial_Logs/Sensor_Proportion.html
+++ b/Industrial_Logs/templates/Industrial_Logs/Sensor_Proportion.html
@@ -7,11 +7,11 @@
     <div id="back" class="main" style="height:90%;">
         <h1 style="color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;">传感器信息</h1>
         <div style="border:2px solid #666;width:100%;height: 80%;float:left" id="sensor_proportion_1"  class="chart-container"></div>
-        {{ dict }}
+
     </div>
     <script>
     $(function () {
-        proportion()
+        proportion({{ kind |safe}},{{ count |safe}})
     })
     </script>
 {% endblock content %}
